# AppG

./: CMakeLists.txt
AppG/: AppG.cpp  AppG.h  CMakeLists.txt  app.manifest  common_def.h  config.h  debug_helper.h  global_macro.h  program.cpp  program.h  programDetail.cpp  program_def.h  utils.h
AppG/Engine/: engine.cpp  engine.h  engine_def.h
AppG/comps/: lifetime.cpp  lifetime.h
AppG/math/: testing.cpp  vectors.h  vectors_old.hpp
AppG/math/linalg/: vectors.h  vectors_old.hpp
AppG/objects/: skeleton.cpp  skeleton.h
AppG/utils/: quickShaders.h  wgpu_utils.cpp  wgpu_utils.h
AppG/window/: quickWindow.cpp  quickWindow.h
